# kuba.rs

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: f.rs  lib.rs  main.rs
src/f/: add.rs  divide.rs  mod.rs
standard/: Cargo.toml
standard/src/: lib.rs
standard/src/f/: add.rs  divide.rs  mod.rs  multiply.rs  subtract.rs
