[package]
name = "kuba"
version = "0.1.0"
authors = ["Cleber de Moraes Goncalves <cleber.engineer@gmail.com>"]
edition = "2021"
description = ""
documentation = "https://github.com/deMGoncalves/kuba.rs"
readme = "README.md"
homepage = "https://kuba.engineer"
repository = "https://github.com/deMGoncalves/kuba.rs"
license = "MIT"
keywords = []

[dependencies]
